--- a/index.html
+++ b/index.html
@@ -273,6 +273,8 @@
       });
 
       function trainNetwork() {
+        const errorEl = document.querySelector(".error-rate");
+
         // Train network on all points
         let totalError = 0;
         for (let i = 0; i < 100; i++) {
@@ -283,14 +285,12 @@
             const error = Math.abs(prediction - point.output);
             totalError += error;
 
+            errorEl.textContent = "Error: " + error.toFixed(5);
+            errorEl.classList.toggle("converged", error < 0.00001);
+
             network.train(point.input, point.output, 0.3);
           });
         }
-
-        console.log(
-          "Average error after training:",
-          totalError / (100 * trainingPoints.length)
-        );
         // Visualize network predictions
         setTimeout(updatePredictionVisualization, 500);
       }
@@ -325,12 +325,6 @@
           );
           predictionLine.geometry = predictionLineGeometry;
         }
-
-        console.log(
-          "Generated prediction curve with",
-          predictionPoints.length,
-          "points"
-        );
       }
 
       // Setup raycaster for mouse interaction
@@ -399,6 +393,24 @@
 
       .copyright a:hover {
         border-bottom-color: rgba(255, 255, 255, 0.9);
+      }
+    </style>
+    <div class="error-rate"></div>
+    <style>
+      .error-rate {
+        color: white;
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+        font-family: "Helvetica Neue", Arial, sans-serif;
+        font-size: 12px;
+        color: rgba(255, 255, 255, 0.6);
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+        transition: all 0.3s ease;
+      }
+      .error-rate.converged {
+        color: rgba(0, 255, 0, 0.9);
+        text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
       }
     </style>
   </body>
