--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       body {
         margin: 0;
         overflow: hidden;
+        cursor: default;
       }
       canvas {
         display: block;
@@ -384,12 +385,6 @@
         transition: all 0.3s ease;
         text-align: center;
         width: 100%;
-      }
-
-      .copyright:hover {
-        color: rgba(255, 255, 255, 0.9);
-        text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
-        transform: scale(1.02);
       }
 
       .copyright a {
